JK-1108/1109/1110: content-hash memo, graph memo, single-module parity
- Schema 2 dirty memo fingerprints source contents (CI-safe); mtime opt-in
- Graph structure memo under target/.jk/preflight/graph-memo.txt
- Single-module success clears dirty memo like workspace builds
- Guide documents fp mode and memo paths